feat: section to change name done!

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -22,7 +22,7 @@
                 <div id="mi-perfil">
                     <h3 class="text-center">Mi Perfil</h3>
                     <div>
-                        <h5>Cambiar Nombre</h5>
+                        <h5>CAMBIAR NOMBRE</h5>
                         <form>
                             <div class="row">
                                 <div class="col-md-4">
