feat: stylized change password, email and telephone, and the aside

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -5,24 +5,25 @@
     <header th:replace="layout/layout :: navbar"></header>
     <main class="container bg-cont mt-5 p-3">
         <div class="row">
-            <div class="col-12">
-                <h1 class="text-center">Area de Clientes</h1>
+            <div class="col-12 text-center">
+                <h1>Area de Clientes</h1>
+                <p th:text="'Bienvenido de nuevo ' + ${user.persona.name}"></p>
             </div>
             <div class="col-3">
                 <div>
                     <h5>MI CUENTA</h5>
-                    <ul>
-                        <li><a href="#mi-perfil">Mi Perfil</a></li>
-                        <li><a href="#mis-pedidos">Mis Pedidos</a></li>
-                        <li><a href="#mis-direcciones">Mis Direcciones</a></li>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#mi-perfil">Mi Perfil</a></li>
+                        <li class="list-group-item"><a href="#mis-pedidos">Mis Pedidos</a></li>
+                        <li class="list-group-item"><a href="#mis-direcciones">Mis Direcciones</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-9">
                 <div id="mi-perfil">
-                    <h3 class="text-center">Mi Perfil</h3>
+                    <h2 style="font-weight: bold" class="text-center">MI PERFIL</h2>
                     <div>
-                        <h5>CAMBIAR NOMBRE</h5>
+                        <h5 style="font-weight: bold">CAMBIAR NOMBRE</h5>
                         <form>
                             <div class="row">
                                 <div class="col-md-4">
@@ -47,44 +48,80 @@
                     </div>
 
                     <div>
-                        <h6>Cambiar Contraseña</h6>
+                        <h5  style="font-weight: bold">CAMBIAR CONTRASEÑA</h5>
                         <form>
-                            <label for="old-password">Antigua Contraseña</label>
-                            <input type="password" name="password" id="old-password" placeholder="Antigua Contraseña" />
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="old-password">Antigua Contraseña</label>
+                                    <input class="form-control" type="password" name="password" id="old-password" placeholder="Antigua Contraseña" />
+                                </div>
 
-                            <label for="password">Nueva Contraseña</label>
-                            <input type="password" name="password" id="password" placeholder="Nueva Contraseña" />
+                                <div class="col-md-4">
+                                    <label for="password">Nueva Contraseña</label>
+                                    <input class="form-control" type="password" name="password" id="password" placeholder="Nueva Contraseña" />
+                                </div>
 
-                            <label for="confirm-password">Repetir Nueva Contraseña</label>
-                            <input type="password" name="password" id="confirm-password" placeholder="Repetir Nueva Contraseña" />
+                                <div class="col-md-4">
+                                    <label for="confirm-password">Repetir Nueva Contraseña</label>
+                                    <input class="form-control" type="password" name="password" id="confirm-password" placeholder="Repetir Nueva Contraseña" />
+                                </div>
+                            </div>
 
-                            <button type="submit">Cambiar Contraseña</button>
+                            <div class="d-flex flex-row-reverse mt-2">
+                                <button class="btn btn-pc-economic-dark" type="submit">Cambiar Contraseña</button>
+                            </div>
                         </form>
                     </div>
 
                     <div>
-                        <h6>Cambiar Email</h6>
+                        <h5 style="font-weight: bold">CAMBIAR EMAIL</h5>
                         <form>
-                            <label for="old-email">Antiguo Email</label>
-                            <input type="email" name="email" id="old-email" placeholder="Antiguo Email" />
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="old-email">Antiguo Email</label>
+                                    <input class="form-control" type="email" name="email" id="old-email" placeholder="Antiguo Email" />
+                                </div>
 
-                            <label for="email">Nuevo Email</label>
-                            <input type="email" name="email" id="email" placeholder="Nuevo Email" />
+                                <div class="col-md-4">
+                                    <label for="email">Nuevo Email</label>
+                                    <input class="form-control" type="email" name="email" id="email" placeholder="Nuevo Email" />
+                                </div>
 
-                            <button type="submit">Cambiar Email</button>
+                                <div class="col-md-4">
+                                    <label for="confirm-email">Repetir Nuevo Email</label>
+                                    <input class="form-control" type="email" name="email" id="confirm-email" placeholder="Repetir Nuevo Email" />
+                                </div>
+                            </div>
+
+                            <div class="d-flex flex-row-reverse mt-2">
+                                <button class="btn btn-pc-economic-dark" type="submit">Cambiar Email</button>
+                            </div>
                         </form>
                     </div>
 
                     <div>
-                        <h6>Cambiar Telefono</h6>
+                        <h5 style="font-weight: bold">CAMBIAR TELEFONO</h5>
                         <form>
-                            <label for="old-phone">Antiguo Telefono</label>
-                            <input type="tel" name="phone" id="old-phone" placeholder="Antiguo Telefono" />
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label for="old-phone">Antiguo Telefono</label>
+                                    <input class="form-control" type="tel" name="phone" id="old-phone" placeholder="Antiguo Telefono" />
+                                </div>
 
-                            <label for="phone">Nuevo Telefono</label>
-                            <input type="tel" name="phone" id="phone" placeholder="Nuevo Telefono" />
+                                <div class="col-md-4">
+                                    <label for="phone">Nuevo Telefono</label>
+                                    <input class="form-control" type="tel" name="phone" id="phone" placeholder="Nuevo Telefono" />
+                                </div>
 
-                            <button type="submit">Cambiar Telefono</button>
+                                <div class="col-md-4">
+                                    <label for="confirm-phone">Repetir Nuevo Telefono</label>
+                                    <input class="form-control" type="tel" name="phone" id="confirm-phone" placeholder="Repetir Nuevo Telefono" />
+                                </div>
+                            </div>
+
+                            <div class="d-flex flex-row-reverse mt-2">
+                                <button class="btn btn-pc-economic-dark" type="submit">Cambiar Telefono</button>
+                            </div>
                         </form>
                     </div>
                 </div>
