--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -9,13 +9,14 @@
     <header class="bg-pc-economic-light">
         <div class="container">
             <a class="col-12 d-flex justify-content-center text-center" href="/">
-                <img style="width:200px; height: 100px;object-fit: contain;" class="col-9" src="/img/static/logo-no-background.png" alt="logo"/>
+                <img style="width:200px; height: 100px;object-fit: contain;" class="col-9"
+                     src="/img/static/logo-no-background.png" alt="logo"/>
             </a>
         </div>
     </header>
     <main class="container bg-cont mt-5 p-3">
         <h1 class="text-center">Iniciar sesión</h1>
-        <div class="d-flex justify-content-center">
+        <div class="d-flex flex-column justify-content-center align-items-center">
             <form class="needs-validation w-25" th:action="@{/login}"
                   th:object="${loginForm}" method="post" novalidate>
                 <div class="mb-3">
@@ -36,6 +37,12 @@
                         Introduzca su Contraseña.
                     </div>
                 </div>
+
+                <div th:if="${error != null}" class="m-1 alert alert-danger">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:text="${error}"></span>
+                </div>
+
                 <div class="text-center">
                     <button type="submit" class="btn btn-pc-economic-dark">Iniciar Session</button>
                 </div>
