--- a/public/PCEconomic/src/main/resources/templates/carrito.html
+++ b/public/PCEconomic/src/main/resources/templates/carrito.html
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="layout/layout :: head"></head>
-    <body>
-        <header th:replace="layout/layout :: navbar"></header>
-        <main class="container bg-cont mt-md-5 mt-5">
-            <h1 class="mt-3 text-center">Carrito</h1>
-            <div class="col-12 table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Precio</th>
-                            <th scope="col">Cantidad</th>
-                            <th scope="col">Total</th>
-                            <th scope="col">Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="carro : ${carrito.ids}">
-                            <td>
-                                <img class="width-minicards-carrito col-3 mb-1"
-                                     th:src="@{/img/productes/{article}/{prop}/0.jpg(article=${carro.propietats.article.id},prop=${carro.propietats.id})}">
-                            </td>
-                            <td>
-                                <div th:text="${carro.propietats.article.nom}"> </div>
-                            </td>
-                            <td th:text="${carro.propietats.preu}"></td>
-                            <td>
-                                <div class="row">
-                                    <form th:action="@{/updatecarrito}" method="get">
-                                        <input type="hidden" hidden="hidden" th:name="idprops"
-                                               th:value="${carro.propietats.id}">
-                                        <input id="quantitat" name="quantitat" class="inputSize" type="number" min="1"
-                                               th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
-                                        <button type="submit" class="btn btn-pc-economic-light"><i
-                                                class="bi bi-arrow-clockwise"></i></button>
-                                    </form>
-                                </div>
+<head th:replace="layout/layout :: head"></head>
+<body class="bgbd">
+    <main th:if="${carrito.ids != null}" class="container bg-cont mt-md-5 mt-5">
+        <h1 class="mt-3 text-center">Carrito</h1>
+        <div th:if="${error != null}" class="m-1 alert alert-danger">
+            <i class='bi bi-exclamation-triangle'></i>
+            <span th:text="${error}"></span>
+        </div>
+        <div class="col-12 table-responsive">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">Total</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="carro : ${carrito.ids}">
+                    <td>
+                        <img class="width-minicards-carrito col-3 mb-1"
+                             th:src="@{/img/productes/{article}/{prop}/0.jpg(article=${carro.propietats.article.id},prop=${carro.propietats.id})}">
+                    </td>
+                    <td>
+                        <div th:text="${carro.propietats.article.nom}"></div>
+                    </td>
+                    <td th:text="${carro.propietats.preu}"></td>
+                    <td>
+                        <div class="row">
+                            <form th:action="@{/updatecarrito}" method="get">
+                                <input type="hidden" hidden="hidden" th:name="idprops"
+                                       th:value="${carro.propietats.id}">
+                                <input id="quantitat" name="quantitat" class="inputSize" type="number" min="1"
+                                       th:value="${carro.quantity}" th:max="${carro.propietats.stock}">
+                                <button type="submit" class="btn btn-pc-economic-light"><i
+                                        class="bi bi-arrow-clockwise"></i></button>
+                            </form>
+                        </div>
 
-                            </td>
-                            <td th:text="${carro.price}"></td>
-                            <td>
-                                <form th:action="@{/deletecarrito}" method="get">
-                                    <input hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
-                                    <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
-                                </form>
-                        </tr>
-                    </tbody>
-                </table>
+                    </td>
+                    <td th:text="${carro.price}"></td>
+                    <td>
+                        <form th:action="@{/deletecarrito}" method="get">
+                            <input hidden="hidden" th:name="idprops" th:value="${carro.propietats.id}">
+                            <button type="submit" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                        </form>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="d-flex flex-row-reverse">
+            <div class="p-2">
+                <h3>Total: <span th:text="${carrito.total}"></span></h3>
+                <a class="btn btn-pc-economic-dark" th:href="@{/carrito/direccion}">Comprar</a>
             </div>
-            <div class="d-flex flex-row-reverse">
-                <div class="p-2">
-                    <h3>Total: <span th:text="${carrito.total}"></span></h3>
-                    <a class="btn btn-pc-economic-dark" th:href="@{/carrito/direccion}">Comprar</a>
-                </div>
-            </div>
+        </div>
 
-        </main>
-        <div th:replace="layout/layout.html :: jquery"></div>
-        <script>
-            $(document).ready(function () {
-                var num = $(".table td:nth-child(3)");
-                var num2 = $(".table td:nth-child(5)");
-                var total = $("h3");
-                total.text(total.text().replace(".0", ",00 €"));
-                for (var i = 0; i < num.length; i++) {
-                    var num3 = num[i].innerHTML;
-                    var num4 = num2[i].innerHTML;
-                    num3 = num3.replace(".0", ",00 €");
-                    num4 = num4.replace(".0", ",00 €");
-                    num[i].innerHTML = num3;
-                    num2[i].innerHTML = num4;
-                }
-            });
-        </script>
-        <footer th:replace="layout/layout.html :: footer"></footer>
-    </body>
+    </main>
+    <main class="bg-cont" th:if="${carrito.ids == null}">
+
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            Tu cesta está vacía
+            Explora multitud de artículos a buen precio desde nuestra página principal
+            <a class="btn btn-pc-economic-dark" th:href="@{/}">Explorar articulos</a>
+        </div>
+    </main>
+    <div th:replace="layout/layout.html :: jquery"></div>
+    <script>
+        $(document).ready(function () {
+            var num = $(".table td:nth-child(3)");
+            var num2 = $(".table td:nth-child(5)");
+            var total = $("h3");
+            total.text(total.text().replace(".0", ",00 €"));
+            for (var i = 0; i < num.length; i++) {
+                var num3 = num[i].innerHTML;
+                var num4 = num2[i].innerHTML;
+                num3 = num3.replace(".0", ",00 €");
+                num4 = num4.replace(".0", ",00 €");
+                num[i].innerHTML = num3;
+                num2[i].innerHTML = num4;
+            }
+        });
+    </script>
+    <footer th:replace="layout/layout.html :: footer"></footer>
+</body>
 </html>
