--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -8,17 +8,20 @@
             <div class="col-12 text-center">
                 <h1>Area de Clientes</h1>
                 <p th:text="'Bienvenido de nuevo ' + ${user.persona.name}"></p>
+                <div class="d-flex flex-row-reverse mt-2 mb-2">
+                    <a class="btn btn-pc-economic-dark" th:href="@{/logout}">Cerrar Sesión</a>
+                </div>
             </div>
 
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
+                    <h2 class="accordion-header" id="miperfil">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             MI PERFIL
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="miperfil"
                          data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div>
@@ -140,13 +143,13 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
+                    <h2 class="accordion-header" id="direcciones">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             MIS DIRECCIONES
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="direcciones"
                          data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div class="row" th:if="${user.persona.direccions.isEmpty()}">
@@ -250,18 +253,17 @@
                                 </div>
                             </div>
 
-
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
+                    <h2 class="accordion-header" id="pedidos">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             MIS PEDIDOS
                         </button>
                     </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="pedidos"
                          data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div class="row" th:if="${user.factures.isEmpty()}">
@@ -276,7 +278,7 @@
                                 </div>
                             </div>
 
-                            <div class="row" th:if="${!user.persona.pedidos.isEmpty()}">
+                            <div class="row" th:if="${!user.factures.isEmpty()}">
                             </div>
                         </div>
                     </div>
@@ -285,5 +287,6 @@
         </div>
     </main>
     <footer th:replace="layout/layout :: footer"></footer>
+    <div th:replace="layout/layout.html :: jquery"></div>
 </body>
 </html>
