--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -6,14 +6,7 @@
     <title>Login | PCEconomic</title>
 </head>
 <body class="bgbd">
-    <header class="bg-pc-economic-light">
-        <div class="container">
-            <a class="col-12 d-flex justify-content-center text-center" href="/">
-                <img style="width:200px; height: 100px;object-fit: contain;" class="col-9"
-                     src="/img/static/logo-no-background.png" alt="logo"/>
-            </a>
-        </div>
-    </header>
+    <header th:replace="layout/layout :: header2"></header>
     <main class="container bg-cont mt-5 p-3">
         <h1 class="text-center">Iniciar sesión</h1>
         <div class="d-flex flex-column justify-content-center align-items-center">
@@ -54,7 +47,6 @@
             <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
         </div>
     </main>
-
     <div th:replace="layout/layout.html :: jquery"></div>
     <script th:src="@{/js/formvalidator.js}"></script>
     <footer th:replace="layout/layout :: footer"></footer>
