--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -5,8 +5,9 @@
 <head>
     <title th:text="${propietats.article.nom} +' | PCEconomic'"></title>
 </head>
+
+<nav th:replace="layout/layout.html :: navbar"></nav>
 <body class="bgbd" th:attr="data-id-article=${propietats.article.id}">
-<header th:replace="layout/layout.html :: header"></header>
 <main class="container bg-cont mt-md-5 mt-5" th:attr="data-id=${propietats.id}">
     <div class="col-12 row m-2 justify-content-center">
         <div class="col-md-6 col-sm-12">
