--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -18,6 +18,18 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
     <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </head>
+
+
+
+<header th:fragment="header2" class="bg-pc-economic-light">
+    <div class="container">
+        <a class="col-12 d-flex justify-content-center text-center" href="/">
+            <img style="width:200px; height: 100px;object-fit: contain;" class="col-9"
+                 src="/img/static/logo-no-background.png" alt="logo"/>
+        </a>
+    </div>
+</header>
+
 <header th:fragment="navbar">
     <nav
             class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-default"
@@ -122,6 +134,9 @@
         </div>
     </div>
 </header>
+
+
+
 <footer
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container bg-cont"
         th:fragment="footer"
